[project]
name = "pyiter"
version = "0.13.9"
description = "PyIter is a Python package for iterative operations inspired by the Kotlin、CSharp(linq)、TypeSrcipt and Rust. Enables strong typing and type inference for iterative operations."
readme = "README.md"
authors = [{ name = "YISH", email = "mokeyish@hotmail.com" }]
requires-python = ">=3.10"
license-files = ["LICENSE-APACHE", "LICENSE-MIT"]

dependencies = ["typing-extensions>=4.14.0"]

[dependency-groups]
dev = ["pdoc>=15.0.4", "pyright>=1.1.403", "ruff>=0.12.1", "tqdm>=4.67.1"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
